# nonlinear-equations

./: CHANGELOG.md  LICENSE  methods.cabal
src/: Nonlinear.hs
src-exe/: P1.hs  P2.hs  P3.hs  P4.hs
src/Nonlinear/: Bisection.hs  Newton.hs  RegulaFalsi.hs  Secant.hs
