cabal-version:      2.4
name:               methods
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             sGaps
maintainer:          

-- A copyright notice.
-- copyright:
category:           Math
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Nonlinear,
                      Nonlinear.Bisection,
                      Nonlinear.Newton,
                      Nonlinear.Secant,
                      Nonlinear.RegulaFalsi

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0,
                      extra >=1.7.10
    hs-source-dirs:   src
    default-language: Haskell2010

executable P1
    main-is:          P1.hs
    build-depends:
        base ^>=4.15.0.0,
        extra >=1.7.10,
        methods
    hs-source-dirs:   src-exe
    default-language: Haskell2010

executable P2
    main-is:          P2.hs
    build-depends:
        base ^>=4.15.0.0,
        extra >=1.7.10,
        methods
    hs-source-dirs:   src-exe
    default-language: Haskell2010

executable P3
    main-is:          P3.hs
    build-depends:
        base ^>=4.15.0.0,
        extra >=1.7.10,
        methods
    hs-source-dirs:   src-exe
    default-language: Haskell2010

test-suite methods-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.15.0.0

